--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,10 @@
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.13.0",
     "expo": "~40.0.0",
+    "expo-camera": "~9.1.0",
+    "expo-image-picker": "~9.2.0",
     "expo-location": "~10.0.0",
+    "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
