deletei uns arquivos

--- a/backend/.env
+++ b/backend/.env
@@ -7,9 +7,9 @@ APP_SECRET=
 
 # Database
 
-DB_HOST=
-DB_USER=
-DB_PASS=
+DB_HOST=http://localhost:5432
+DB_USER=postgres
+DB_PASS=jktff@3#n
 DB_NAME=
 
 # Mongo
