--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^5.11.3",
     "@react-navigation/native": "^5.9.0",
     "@react-navigation/stack": "^5.13.0",
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-camera": "~9.1.0",
     "expo-image-picker": "~9.2.0",
@@ -37,6 +38,8 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
