--- a/app/package.json
+++ b/app/package.json
@@ -36,6 +36,7 @@
     "react-native-svg-transformer": "^0.14.3",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.3",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
