--- a/app/package.json
+++ b/app/package.json
@@ -8,35 +8,34 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/metro-config": "^0.1.50",
+    "@expo/metro-config": "^0.1.53",
+    "@expo/vector-icons": "^10.1.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@react-native-async-storage/async-storage": "^1.13.3",
-    "@react-native-community/geolocation": "^2.0.2",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.11.3",
-    "@react-navigation/native": "^5.9.0",
-    "@react-navigation/stack": "^5.13.0",
+    "@react-native-async-storage/async-storage": "^1.13.4",
+    "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/viewpager": "3.3.0",
+    "@react-navigation/bottom-tabs": "^5.11.7",
+    "@react-navigation/material-bottom-tabs": "^5.1.1",
+    "@react-navigation/native": "^5.9.2",
+    "@react-navigation/stack": "^5.14.2",
     "axios": "^0.21.1",
-    "expo": "~40.0.0",
-    "expo-camera": "~9.1.0",
-    "expo-image-picker": "~9.2.0",
-    "expo-location": "~10.0.0",
-    "expo-permissions": "~10.0.0",
-    "expo-status-bar": "~1.0.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
-    "react-native-gravatar": "^1.0.2",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.0",
-    "react-native-svg": "^12.1.0",
+    "expo": "^37.0.0",
+    "expo-av": "~8.1.0",
+    "expo-camera": "~8.2.0",
+    "expo-linear-gradient": "~8.1.0",
+    "lottie-react-native": "~2.6.1",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-paper": "^3.9.0",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
+    "react-native-status-bar-height": "^2.5.0",
+    "react-native-svg": "^11.0.1",
     "react-native-svg-transformer": "^0.14.3",
-    "react-native-swiper": "^1.6.0",
-    "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.3",
+    "react-native-web": "^0.11.7",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
