--- a/app/package.json
+++ b/app/package.json
@@ -13,14 +13,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@react-native-async-storage/async-storage": "^1.13.4",
     "@react-native-community/masked-view": "0.1.6",
-    "@react-native-community/viewpager": "3.3.0",
+    "@react-native-community/viewpager": "^4.2.2",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/material-bottom-tabs": "^5.1.1",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "axios": "^0.21.1",
     "expo": "^37.0.0",
-    "expo-av": "~8.1.0",
+    "expo-av": "^9.0.0",
     "expo-camera": "~8.2.0",
     "expo-linear-gradient": "~8.1.0",
     "lottie-react-native": "~2.6.1",
