--- a/app/package.json
+++ b/app/package.json
@@ -11,16 +11,18 @@
     "@expo/metro-config": "^0.1.53",
     "@expo/vector-icons": "^10.1.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-native-fontawesome": "^0.2.6",
     "@react-native-async-storage/async-storage": "^1.13.4",
     "@react-native-community/masked-view": "0.1.6",
-    "@react-native-community/viewpager": "^4.2.2",
+    "@react-native-community/viewpager": "3.3.0",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/material-bottom-tabs": "^5.1.1",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "axios": "^0.21.1",
     "expo": "^37.0.0",
-    "expo-av": "^9.0.0",
+    "expo-av": "~8.1.0",
     "expo-camera": "~8.2.0",
     "expo-linear-gradient": "~8.1.0",
     "lottie-react-native": "~2.6.1",
@@ -35,6 +37,7 @@
     "react-native-status-bar-height": "^2.5.0",
     "react-native-svg": "^11.0.1",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-video": "^5.1.0-alpha8",
     "react-native-web": "^0.11.7",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
