--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
+    "expo-av": "^9.0.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   }
