--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/masked-view": "0.1.6",
     "@react-native-community/viewpager": "3.3.0",
     "@react-navigation/bottom-tabs": "^5.11.7",
+    "@react-navigation/drawer": "^5.12.3",
     "@react-navigation/material-bottom-tabs": "^5.1.1",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
