--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@react-navigation/drawer": "^5.12.3",
     "@reduxjs/toolkit": "^1.5.0",
     "expo-av": "^9.0.0",
     "react-redux": "^7.2.2",
