--- a/app/package.json
+++ b/app/package.json
@@ -38,6 +38,7 @@
     "react-native-status-bar-height": "^2.5.0",
     "react-native-svg": "^11.0.1",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-tab-view": "^2.15.2",
     "react-native-video": "^5.1.0-alpha8",
     "react-native-web": "^0.11.7",
     "react-redux": "^7.2.2",
