--- a/package.json
+++ b/package.json
@@ -3,7 +3,15 @@
     "@react-navigation/drawer": "^5.12.3",
     "@reduxjs/toolkit": "^1.5.0",
     "expo-av": "^9.0.0",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5"
+  },
+  "devDependencies": {
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "sequelize": "^6.5.0"
   }
 }
